--- a/src/components/ItemButton/style.module.scss
+++ b/src/components/ItemButton/style.module.scss
@@ -18,8 +18,8 @@
   }
 
   .icon{
-    min-height: 3.5rem;
-    min-width: 3.5rem;
+    min-height: 4rem;
+    min-width: 4rem;
     border-radius: 50%;
     padding: 0.5rem;
     display: flex;
@@ -40,6 +40,7 @@
       white-space: nowrap;
       text-overflow: ellipsis;
       overflow: hidden;
+      margin: 0;
     }
     p{
       margin-top: 0.5rem;
