--- a/src/components/BottomMenu/styles.module.scss
+++ b/src/components/BottomMenu/styles.module.scss
@@ -1,4 +1,5 @@
 .container{
+  position: relative;
   width: 100%;
   height: 4.5rem;
   background: linear-gradient(329deg, var(--blue-800) 0%, var(--blue-300) 100%);
@@ -23,6 +24,26 @@
     flex-direction: column;
 
     color: var(--white);
+
+    &.urgentButton{
+      min-width: 6rem;
+      min-height: 6rem;
+      max-width: 6rem;
+      max-height: 6rem;
+      border-radius: 3rem;
+      background-color: var(--red-900);
+      transform: translateY(-30%);
+      box-shadow: 1px 5px 5px rgba(0, 0, 0, 0.26);
+
+      &:active {
+        transform: scale(0.9);
+      }
+
+      img{
+        height: 5rem;
+        width: 5rem;
+      }
+    }
 
     &.active{
       background-color: var(--blue-800);
