--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -35,6 +35,7 @@
       transition: 0.2s ease;
       display: flex;
       font-weight: 400;
+      margin: 0;
       
       span{
         margin-left: 0.3rem;
