fix: modal animation

--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -67,6 +67,7 @@
       .yesAndNoButton{
         width: 48%;
         border-radius: 7px;
+        font-weight: 600;
         background-color: var(--blue-400);
         font-size: 1.5rem;
         color: var(--white);
@@ -88,6 +89,7 @@
       border-radius: 7px;
       background-color: var(--blue-400);
       font-size: 1.5rem;
+      font-weight: 600;
       color: var(--white);
       border: 0;
       outline: 0;
