feat: change blue color

--- a/src/components/Player/style.module.scss
+++ b/src/components/Player/style.module.scss
@@ -13,7 +13,7 @@
     width: 100%;
     border-radius: 7px;
 
-    background-color: var(--blue-300);
+    background: linear-gradient(329deg, var(--blue-800) 0%, var(--blue-300) 100%);
     height: 5rem;
 
     display: flex;
