--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -38,19 +38,22 @@ html{
 
  --green-300 : #5DB075;
  --green-350 : #54A06A;
- --green-500: #04D361;
+ --green-500: #1FBE4D;
  
  --purple-300: #9F75FF;
  --purple-400: #9164FA; 
  --purple-500: #8257E5;
  --purple-800: #6F48C9;
 
- --blue-800 : #1C74E9;
+ 
+ --blue-800 : #7B94B7;
+ --blue-new : #1C74E9;
  --blue-600 : #1A73E9;
  --blue-400 : #5B7FD6;
  --blue-300 : #658FF3;
 
- --red-900 : #EF4040
+ --red-300 : #C85959;
+ --red-900 : #E23A3A;
 }
 
 body {
