fix: background sign input

--- a/src/pages/SignIn/styles.module.scss
+++ b/src/pages/SignIn/styles.module.scss
@@ -78,6 +78,7 @@
       border: 0;
       border-bottom: 1px solid var(--gray-200);
       outline: 0;
+      background: var(--white);
       transition: border 0.2s ease;
       padding-left: 0.5rem;
     }
