feat: forgotPassword page

--- a/src/components/SignPageHeader/style.module.scss
+++ b/src/components/SignPageHeader/style.module.scss
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   width: 100%;
 
   button{
