--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -47,7 +47,7 @@ html{
 
  
  --blue-800 : #7B94B7;
- --blue-new : #1C74E9;
+ --blue-900 : #1C74E9;
  --blue-600 : #1A73E9;
  --blue-400 : #5B7FD6;
  --blue-300 : #658FF3;
