--- a/src/pages/Questionnaire/styles.module.scss
+++ b/src/pages/Questionnaire/styles.module.scss
@@ -5,11 +5,12 @@
   width: 100%;
   height: 100vh;
   background: var(--white);
+  overflow-y: scroll;
 
   main{
     margin-top: 5rem;
     width: 100%;
-    padding: 1rem 1rem 6rem 1rem;
+    padding: 1rem 1rem 3rem 1rem;
     height: fit-content;
 
     h2{
