--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -57,6 +57,29 @@
       }
     }
 
+    .quantity_container{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      gap: 1rem;
+
+      button{
+        width: 6rem;
+        padding: 1rem;
+        border-radius: 7px;
+
+        font-size: 1.5rem;
+        font-weight: 600;
+
+        &.active{
+          background-color: var(--blue-400);
+          color: var(--white);
+        }
+      }
+    }
+
     .sliderTimerContainer{
       width: 100%;
       height: fit-content;
