react: add transition with framet to pages

--- a/src/pages/SignIn/styles.module.scss
+++ b/src/pages/SignIn/styles.module.scss
@@ -23,6 +23,8 @@
 
   .forgotPassword{
     margin: 0.5rem auto;
+    display: flex;
+    text-align: center;
     font-weight: 500;
     font-size: 1.15rem;
     color: var(--blue-300);
