--- a/src/components/BottomMenu/styles.module.scss
+++ b/src/components/BottomMenu/styles.module.scss
@@ -2,7 +2,8 @@
   position: relative;
   width: 100%;
   height: 4.5rem;
-  background: linear-gradient(329deg, var(--blue-800) 0%, var(--blue-300) 100%);
+  background: var(--white);
+  box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.26);
   position: fixed;
   bottom: 0;
 
@@ -25,6 +26,12 @@
 
     color: var(--white);
 
+    .iconButton{
+      color: var(--blue-400);
+      width: 2.5rem;
+      height: 2.5rem;
+    }
+
     &.urgentButton{
       min-width: 6rem;
       min-height: 6rem;
@@ -46,7 +53,7 @@
     }
 
     &.active{
-      background-color: var(--blue-400);
+      background-color: var(--gray-100);
     }
   }
   
