--- a/src/components/ItemButton/style.module.scss
+++ b/src/components/ItemButton/style.module.scss
@@ -1,3 +1,10 @@
+.itemButtom{
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  text-align: left;
+}
+
 .container{
   display: flex;
   max-width: 100%;
@@ -10,8 +17,6 @@
   padding: 1rem;
   overflow: hidden;
   transition: transform 0.2s ease;
-
-  margin-top: 1rem;
 
   &:active{
     transform: scale(0.97);
