refact: scss from inputs

--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -69,6 +69,7 @@
         width: 6rem;
         padding: 1rem;
         border-radius: 7px;
+        background-color: var(--gray-100);
 
         font-size: 1.5rem;
         font-weight: 600;
