refact: remove useMemo from pages

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -34,8 +34,9 @@ html{
  --gray-500: #808080;
  --gray-800: #494D4B;
 
- --text : #434343;
+ --text : #4d4d4d;
 
+ --green-100: #83CD98;
  --green-300 : #5DB075;
  --green-350 : #54A06A;
  --green-500: #1FBE4D;
