--- a/src/components/Modal/style.module.scss
+++ b/src/components/Modal/style.module.scss
@@ -43,7 +43,8 @@
       margin-top: 1.5rem;
       
       h2{
-        font-size: 2rem;
+        font-size: 1.5rem;
+        text-align: center;
         font-weight: 800;
         white-space: normal;
       }
@@ -78,6 +79,52 @@
           background-color: var(--blue-400);
           color: var(--white);
         }
+      }
+    }
+
+    .feedbackButtonsContainer{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 100%;
+      margin-bottom: 1rem;
+
+      button{
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        background-color: transparent;
+        font-size: 1.25rem;
+        gap: 0.3rem;
+
+        .buttonFeedbackIcons{
+          stroke-width: 1px;
+          width: 3.5rem;
+          height: 3.5rem;
+        }
+
+        &.like {
+          color: var(--green-300);
+        }
+
+        &.dislike {
+          color: var(--red-900);
+        }
+
+        &.activeFeedback{
+          &.like {
+            .buttonFeedbackIcons{
+              fill: var(--green-100);
+            }
+          }
+  
+          &.dislike {
+            .buttonFeedbackIcons{
+              fill: var(--red-300);
+            }
+          }
+        }
+
       }
     }
 
