--- a/src/pages/SignIn/styles.module.scss
+++ b/src/pages/SignIn/styles.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   padding: 1rem 1.25rem;
   padding-bottom: 0;
+  background-color: var(--white);
 
   section{
     display: flex;
