--- a/src/pages/SignIn/styles.module.scss
+++ b/src/pages/SignIn/styles.module.scss
@@ -22,6 +22,7 @@
   flex: 1;
   flex-direction: column;
   width: 90%;
+  background-color: var(--white);
 
   .forgotPassword{
     margin: 0.5rem auto;
