--- a/src/pages/Questionnaire/styles.module.scss
+++ b/src/pages/Questionnaire/styles.module.scss
@@ -16,6 +16,9 @@
     h2{
       font-size: 1.75rem;
     }
+    .loadingIcon{
+      margin: 2rem auto;
+    }
 
     .questionItem{
       width: 100%;
