--- a/src/components/ConfigContainer/styles.module.scss
+++ b/src/components/ConfigContainer/styles.module.scss
@@ -4,6 +4,7 @@
   margin: 1rem 0;
   border-radius: 7px;
   overflow: hidden;
+  transition: 0.3s ease;
 
   .configurationButton{
     width: 100%;
